	PR debug/88635 	* dwarf2out.c (const_ok_for_output_1): Reject MINUS that contains 	SYMBOL_REF, CODE_LABEL or UNSPEC in subexpressions of second argument. 	Reject PLUS that contains SYMBOL_REF, CODE_LABEL or UNSPEC in 	subexpressions of both operands. 	(mem_loc_descriptor): Handle UNSPEC if target hook acks it and all the 	subrtxes are CONSTANT_P. 	* config/i386/i386.c (ix86_const_not_ok_for_debug_p): Revert 	2018-11-09 changes.

* gcc.dg/debug/dwarf2/pr88635.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@267594 138bc75d-0d04-0410-961f-82ee72b054a4